[package]
name = "okc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
termcolor = "1.2.0"
chrono = { version = "0", features = ["serde"] }
reqwest = { version = "0", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
phf = { version = "0", features = ["macros", "serde"] }

[build-dependencies]
reqwest = { version = "0", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
proc-macro2 = "1"
quote = "1"